<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_default"
    tools:context=".presentation.PersonalInformation">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:padding="20dp"
            android:id="@+id/barbell"
            android:src="@mipmap/register"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Update Information"
            android:textSize="20dp"
            android:textStyle="bold"
            android:paddingVertical="10dp"
            android:gravity="center_horizontal|center_vertical"
            android:textColor="@color/black"
            android:fontFamily="monospace"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/regDetails"
        android:layout_margin="20dp"
        android:layout_centerVertical="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:id="@+id/regIndex0">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".40"
                android:text="First Name:"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold"
                android:fontFamily="monospace"
                />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".60"
                android:hint="John"
                android:id="@+id/regFirstName"
                android:inputType="text"
                android:textSize="20dp"
                android:textStyle="bold"
                android:fontFamily="monospace"
                />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:id="@+id/regIndex1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".40"
                android:text="Last Name:"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold"
                android:fontFamily="monospace"
                />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".60"
                android:hint="Smith"
                android:id="@+id/regLastName"
                android:inputType="text"
                android:textSize="20dp"
                android:textStyle="bold"
                android:fontFamily="monospace"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal"
            android:id="@+id/regIndex2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Email:"
                android:layout_weight=".25"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold"
                android:fontFamily="monospace"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_weight=".65"
                android:layout_height="wrap_content"
                android:hint="john@example.com"
                android:inputType="textEmailAddress"
                android:id="@+id/regEmail"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold"
                android:fontFamily="monospace"

                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal"
            android:id="@+id/regIndex3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Password:"
                android:layout_weight=".45"
                android:layout_gravity="center_vertical"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold"
                android:fontFamily="monospace"
                />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.55"
                android:id="@+id/regPassword"
                android:inputType="textPassword"
                android:hint="********"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold"
                android:fontFamily="monospace"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal"
            android:id="@+id/regIndex4">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.60"
                android:text="Enter your age:"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold"
                android:fontFamily="monospace"
                />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.4"
                android:inputType="number"
                android:id="@+id/regAge"
                android:hint="minimum 13"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold"
                android:fontFamily="monospace"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal"
            android:id="@+id/regIndex5">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Height (cm):"
                android:layout_gravity="center_vertical"
                android:textColor="@color/black"
                android:layout_weight="0.50"
                android:textSize="20dp"
                android:textStyle="bold"
                android:fontFamily="monospace"
                />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:hint="150"
                android:inputType="number"
                android:id="@+id/regHeight"
                android:layout_weight=".50"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold"
                android:fontFamily="monospace"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal"
            android:id="@+id/regIndex6">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="weight (KG):"
                android:layout_weight=".50"
                android:layout_gravity="center_vertical"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold"
                android:fontFamily="monospace"
                />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.50"
                android:inputType="number"
                android:id="@+id/regWeight"
                android:hint="62"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold"
                android:fontFamily="monospace"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            >
            <Button
                android:id="@+id/updateBttn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/reg_buttons"
                android:padding="20dp"
                android:textStyle="bold"
                android:fontFamily="monospace"
                android:text="Update"
                android:textColor="@color/black"
                android:textSize="18dp" />

        </LinearLayout>

    </LinearLayout>

    </RelativeLayout>
