...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <ImageButton
                android:id="@+id/userInformation"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_weight="90"
                android:background="@drawable/border"
                android:padding="10dp"
                android:layout_gravity="center_horizontal"
...
